[project]
name = "nmap-mcp-server"
version = "1.0.0"
description = "Nmap MCP Server - Exposes Nmap CLI functionality as MCP tools using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.3",
]

[project.scripts]
nmap-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
